--- a/home/programs/flameshot/flameshot.ini
+++ b/home/programs/flameshot/flameshot.ini
@@ -1,12 +1,22 @@
 [General]
+allowMultipleGuiInstances=true
+autoCloseIdleDaemon=false
 buttons=@Variant(\0\0\0\x7f\0\0\0\vQList<int>\0\0\0\0\x16\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\x12\0\0\0\x13\0\0\0\xf\0\0\0\b\0\0\0\t\0\0\0\x10\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\x11\0\0\0\x14\0\0\0\x15\0\0\0\x17)
 contrastOpacity=188
 copyOnDoubleClick=true
+drawColor=#00ffff
+drawThickness=3
 filenamePattern=%d.%m.%y_%I.%M.%S%p
+jpegQuality=100
+predefinedColorPaletteLarge=true
 saveAsFileExtension=png
-saveLastRegion=true
+saveLastRegion=false
 savePath=/home/blackwhite/Pictures/screenshot
+showHelp=false
+showMagnifier=true
+showSelectionGeometryHideTime=3000
 showStartupLaunchMessage=false
+startupLaunch=true
 uiColor=#ff78c0
 undoLimit=999
 uploadClientSecret=
@@ -17,3 +27,7 @@ TYPE_MOVE_DOWN=j
 TYPE_MOVE_LEFT=h
 TYPE_MOVE_RIGHT=l
 TYPE_MOVE_UP=k
+TYPE_SELECT_ALL=Space
+TYPE_SIZEDECREASE=-
+TYPE_SIZEINCREASE="="
+TYPE_TOGGLE_PANEL=Ctrl+b
