--- a/home/visuals/polybar/config/modules/bspwm.ini
+++ b/home/visuals/polybar/config/modules/bspwm.ini
@@ -13,7 +13,7 @@ reverse-scroll = true
 
 fuzzy-match = true
 ws-icon-0=1;
-ws-icon-1=2;
+ws-icon-1=2;
 ws-icon-2=3;
 ws-icon-3=4;
 ws-icon-4=5;
